# embedded-systems-lab

./: .gitignore  AGENTS.md
1-hello-word/: Cargo.toml  Makefile  README.md
1-hello-word/.cargo/: config.toml
1-hello-word/scripts/: flash_with_esptool.py  run_firmware.sh
1-hello-word/src/: lib.rs  main.rs
1-hello-word/tools/openocd/: wch-riscv.cfg
2-wifi/: Cargo.toml  Makefile  README.md
2-wifi/.cargo/: config.toml
2-wifi/scripts/: flash_with_esptool.py
2-wifi/src/: lib.rs  main.rs
3-codex-panel/: Cargo.toml  Makefile  README.md  build.rs
3-codex-panel/.cargo/: config.toml
3-codex-panel/scripts/: __init__.py  codex_panel_hook.mjs  flash_with_esptool.py  install_hooks.py  run_panel.sh
3-codex-panel/src/: lib.rs  main.rs  panel_bridge_host.rs
3-codex-panel/tests/: test_codex_panel_hook.mjs  test_install_hooks.py  test_panel_bridge.rs
