[package]
name = "opench-rust-hello-word"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../.ref/ch32-hal", default-features = false, features = [
  "ch32v307vct6",
  "rt",
  "memory-x",
  "embassy",
  "time-driver-tim1",
] }
panic-halt = "1.0"

[profile.dev]
opt-level = 1
debug = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = false
debug = 2
