[package]
name = "opench-rust-wifi"
version = "0.1.0"
edition = "2021"

[features]
default = ["firmware"]
firmware = ["dep:ch32-hal", "dep:panic-halt"]

[dependencies]
ch32-hal = { path = "../.ref/ch32-hal", optional = true, default-features = false, features = [
  "ch32v307vct6",
  "rt",
  "memory-x",
  "embassy",
  "time-driver-tim1",
] }
panic-halt = { version = "1.0", optional = true }

[[bin]]
name = "opench-rust-wifi"
path = "src/main.rs"
required-features = ["firmware"]

[profile.dev]
opt-level = 1
debug = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = false
debug = 2
